--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -19,6 +19,24 @@
         <link rel="stylesheet" href="{{ asset('style.css') }}" />
     </head>
 
+    <header class="container-fluid p-0" >
+        <nav class="{% block classFondNav %}{% endblock classFondNav %}">
+            <ul class="row justify-content-around menu ">
+                <li><a href="{{ path('Accueil') }}"> Acceuil </a></li>
+                <li><a href="{{ path('Peintures') }}"> Peinture intérieur - extérieur </a></li>
+                <li><a href="{{ path('Toiture') }}"> Démoussage toiture </a></li>
+                <li><a href="{{ path('Travaux') }}"> Travaux </a></li>
+                <li><a href="{{ path('Réalisations') }}"> Mes réalisations </a></li>
+                <li><a href="{{ path('Contact') }}"> Contact</a></li>
+                <li><a href="{{ path('Connexion_Inscription') }}"> Connexion - inscription </a></li>
+            </ul>
+
+            {% block contentNav %}
+            {% endblock contentNav %}
+
+        </nav>
+    </header>
+
     <body>
 
         {% block content %}
@@ -45,12 +63,16 @@
         </nav>
     </footer>
 
+
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"
                 integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
                 crossorigin="anonymous">
         </script>
 
-        <script src="{{ asset('JS/main.js') }}"></script>
+        <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+
+        <script src="{{ asset('js/main.js') }}"></script>
 
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
                 integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
