--- a/templates/Pages/page-accueil.html.twig
+++ b/templates/Pages/page-accueil.html.twig
@@ -48,7 +48,7 @@
 
           <p class="col-lg-3 text-center">
             Nous nous déplaçons dans un rayon de
-            <strong class="nombre"> 400km ! </strong> Autour de VILLEMOUTIERS.
+            <strong class="nombre"> 400km ! </strong> Autour de VILLEMOUTIERS, pour de gros travaux.
           </p>
 
           <!-- CARD GOOGLE MAPS -->
