--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -51,10 +51,10 @@
                 <li class="col-3 text-center">
                     <a href=""> Plan du site</a>
                 </li>
-                <li class="col-3 text-center">
+                <li class="col-1 text-center">
                     <a href="https://www.facebook.com/Entreprise-Garcia-645327215582537"
                        target="_blank">
-                        <img src="{{ asset("img/facebook.png") }}"
+                        <img src="{{ asset("img/fb.png") }}"
                              alt="logo"
                              class="img-fluid logofb"/>
                     </a>
