--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -9,7 +9,7 @@
         <meta name="viewport"
               content="width=device-width, initial-scale=1.0" />
 
-        <title>{% block title %}{% endblock title %}</title>
+        <title>Entreprise GARCIA</title>
 
         <link rel="stylesheet"
               href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="{{ asset('style.css') }}" />
     </head>
 
+    <!--MENU-->
     <header class="container-fluid p-0" >
         <nav class="{% block classFondNav %}{% endblock classFondNav %}">
             <ul class="row justify-content-around menu ">
