--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -1,5 +1,14 @@
 {% extends "Base/base.html.twig" %}
 
 {% block content %}
-
+    <div id="contactForm" class="pt-5">
+        {{ form_start(form) }}
+        <div class="">
+            <div class="col">{{ form_row(form.firstname) }}</div>
+            <div class="col">{{ form_row(form.lastname) }}</div>
+            <div class="col">{{ form_row(form.email) }}</div>
+            <div class="col">{{ form_row(form.phone) }}</div>
+            <div class="col">{{ form_row(form.adress) }}</div>
+            <div class="col">{{ form_row(form.message) }}</div>
+        </div>
 {% endblock content %}
