--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -10,7 +10,7 @@
             <div class="pt-3">{{ form_row(form.phone) }}</div>
             <div class="pt-3">{{ form_row(form.adress) }}</div>
             <div class="pt-3">{{ form_row(form.message) }}</div>
-            <div class="pt-3">{{ form_row(form.submit) }}</div>
+            <div class="pt-3 mb-5">{{ form_row(form.submit) }}</div>
         </div>
     </div>
         {{ form_end(form) }}
