--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -28,7 +28,7 @@
                 <li><a href="{{ path('Toiture') }}"> Démoussage toiture </a></li>
                 <li><a href="{{ path('Travaux') }}"> Travaux </a></li>
                 <li><a href="{{ path('Réalisations') }}"> Mes réalisations </a></li>
-                <li><a href="{{ path('Contact') }}"> Contact</a></li>
+                <li><a href="{{ path('contact') }}"> Contact</a></li>
             </ul>
 
             {% block contentNav %}
