form + animation css

--- a/public/css/peinture_int_ext.scss
+++ b/public/css/peinture_int_ext.scss
@@ -1,5 +1,12 @@
 /* PEINTURE INTERIEUR EXTERIEUR */
-.fond1 {
-  background-image: url("img/fond1.jpg");
+.fond_accueil {
+  background-image: url("img/fond_accueil.jpg");
   @extend %fond;
 }
+
+
+
+
+
+
+
