--- a/templates/Pages/interieur-exterieur.html.twig
+++ b/templates/Pages/interieur-exterieur.html.twig
@@ -1,7 +1,9 @@
 {% extends "Base/base.html.twig" %}
 
-{% block classFondNav %}fond1{% endblock classFondNav %}
+{% block classFondNav %}fond_accueil{% endblock classFondNav %}
 
-  {% block content %}
 
-  {% endblock content %}
+{% block content %}
+
+
+{% endblock content %}
