--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 /* PAGE ACCUEIL */
+@import url("https://fonts.googleapis.com/css?family=Roboto:700");
 .fond_accueil {
   background-image: url("img/fond_accueil.jpg");
 }
@@ -66,9 +67,84 @@ a:hover {
   font-size: 18px;
 }
 
+/*ANIMATION*/
+.container {
+  color: #999;
+  text-transform: uppercase;
+  font-size: 30px;
+  font-weight: bold;
+  padding-top: 5%;
+  display: block;
+  text-align: center;
+}
+
+#flip {
+  height: 50px;
+  overflow: hidden;
+}
+
+#flip > div > div {
+  color: #fff;
+  padding: 4px 12px;
+  height: 45px;
+  margin-bottom: 45px;
+  display: inline-block;
+}
+
+#flip div:first-child {
+  animation: show 10s linear infinite;
+}
+
+#flip div div {
+  background: #42c58a;
+}
+
+#flip div:first-child div {
+  background: #4ec7f3;
+}
+
+#flip div:last-child div {
+  background: #DC143C;
+}
+
+@keyframes show {
+  0% {
+    margin-top: -270px;
+  }
+  5% {
+    margin-top: -180px;
+  }
+  33% {
+    margin-top: -180px;
+  }
+  38% {
+    margin-top: -90px;
+  }
+  66% {
+    margin-top: -90px;
+  }
+  71% {
+    margin-top: 0px;
+  }
+  99.99% {
+    margin-top: 0px;
+  }
+  100% {
+    margin-top: -270px;
+  }
+}
+#container p {
+  width: 100%;
+  bottom: 30px;
+  font-size: 12px;
+  color: #999;
+  margin-top: 200px;
+}
+
+/*ANIMATION END*/
 /* PEINTURE INTERIEUR EXTERIEUR */
-.fond1 {
-  background-image: url("img/fond1.jpg");
+.fond_accueil {
+  background-image: url("img/fond_accueil.jpg");
 }
 
 /* DEMOUSSAGE TOITURE */
@@ -222,13 +298,14 @@ a:hover {
 #contactForm {
   margin-left: 3%;
   width: 10%;
+  padding-bottom: 3%;
 }
 
 * {
   margin: 0;
 }
 
-.fond_accueil, .fond1, .fond_toiture, .travaux {
+.fond_accueil, .fond_toiture, .travaux {
   background-position: center;
   background-size: cover;
   height: 105vh;
