--- a/templates/Pages/page-accueil.html.twig
+++ b/templates/Pages/page-accueil.html.twig
@@ -11,8 +11,7 @@
     <p>06.45.42.08.58</p>
 
     <div class="button">
-      <a href="{{ path('Contact') }}"><span>Mon devis gratuit</span></a>
-    </div>
+      <a href="{{ path('contact') }}"><span>Mon devis gratuit</span></a>
   </div>
 
 {% endblock contentNav %}
@@ -34,6 +33,18 @@
             surface que vous avez, et notamment vous aidez dans vos projet de
             travaux.
           </p>
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+
+            <div id=flip>
+              <div><div><span>Peinture intérieur et extérieur tout type de surface</span></div></div>
+              <div><div>Démoussage toiture</div></div>
+              <div><div>Petits travaux</div></div>
+            </div>
+
         </div>
       </section>
 
