--- a/public/style.css
+++ b/public/style.css
@@ -147,153 +147,12 @@ a:hover {
   background-image: url("img/fond_accueil.jpg");
 }
 
-/* DEMOUSSAGE TOITURE */
-.fond_toiture {
-  background-image: url("img/fond_toiture.jpg");
-}
-
 /* TRAVAUX */
 .travaux {
   background-image: url("img/travaux.jpg");
 }
 
 /*REALISATIONS*/
-/*SLIDER*/
-#slider-wrapper {
-  width: 940px;
-  height: 470px;
-  margin: 50px auto;
-  position: relative;
-  margin-bottom: 0px;
-  background: rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-  margin-bottom: 5%;
-}
-
-#s1 {
-  padding: 6px;
-  background: #000000;
-  position: absolute;
-  left: 50%;
-  bottom: 25px;
-  margin-left: -36px;
-  border-radius: 20px;
-  opacity: 0.3;
-  cursor: pointer;
-  z-index: 999;
-}
-
-#s2 {
-  padding: 6px;
-  background: #000000;
-  position: absolute;
-  left: 50%;
-  bottom: 25px;
-  margin-left: -12px;
-  border-radius: 20px;
-  opacity: 0.3;
-  cursor: pointer;
-  z-index: 999;
-}
-
-#s3 {
-  padding: 6px;
-  background: #000000;
-  position: absolute;
-  left: 50%;
-  bottom: 25px;
-  margin-left: 12px;
-  border-radius: 20px;
-  opacity: 0.3;
-  cursor: pointer;
-  z-index: 999;
-}
-
-#s4 {
-  padding: 6px;
-  background: #000000;
-  position: absolute;
-  left: 50%;
-  bottom: 25px;
-  margin-left: 36px;
-  border-radius: 20px;
-  opacity: 0.3;
-  cursor: pointer;
-  z-index: 999;
-}
-
-#s1:hover,
-#s2:hover,
-#s3:hover,
-#s4:hover {
-  opacity: 0.5;
-}
-
-.inner-wrapper {
-  width: 940px;
-  height: 470px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin-bottom: 0px;
-  overflow: hidden;
-}
-
-.control {
-  display: none;
-}
-
-#Slide1:checked ~ .overflow-wrapper {
-  margin-left: 0%;
-}
-
-#Slide2:checked ~ .overflow-wrapper {
-  margin-left: -100%;
-}
-
-#Slide3:checked ~ .overflow-wrapper {
-  margin-left: -200%;
-}
-
-#Slide4:checked ~ .overflow-wrapper {
-  margin-left: -300%;
-}
-
-#Slide1:checked + #s1 {
-  opacity: 1;
-}
-
-#Slide2:checked + #s2 {
-  opacity: 1;
-}
-
-#Slide3:checked + #s3 {
-  opacity: 1;
-}
-
-#Slide4:checked + #s4 {
-  opacity: 1;
-}
-
-.overflow-wrapper {
-  width: 400%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow-y: hidden;
-  z-index: 1;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-
-.slide img {
-  width: 25%;
-  float: left;
-}
-
 /*CONTACT*/
 #contactForm {
   margin-left: 3%;
@@ -305,7 +164,7 @@ a:hover {
   margin: 0;
 }
 
-.fond_accueil, .fond_toiture, .travaux {
+.fond_accueil, .travaux {
   background-position: center;
   background-size: cover;
   height: 105vh;
