--- a/templates/Pages/mes-realisations.html.twig
+++ b/templates/Pages/mes-realisations.html.twig
@@ -3,23 +3,27 @@
 
 {% block content %}
 
-    <div id="slider-wrapper">
-        <div class="inner-wrapper">
-            <input checked type="radio" name="slide" class="control" id="Slide1" />
-            <label for="Slide1" id="s1"></label>
-            <input type="radio" name="slide" class="control" id="Slide2" />
-            <label for="Slide2" id="s2"></label>
-            <input type="radio" name="slide" class="control" id="Slide3" />
-            <label for="Slide3" id="s3"></label>
-            <input type="radio" name="slide" class="control" id="Slide4" />
-            <label for="Slide4" id="s4"></label>
-            <div class="overflow-wrapper">
-                <a class="slide" href=""><img src="{{ asset('img/peinture/mur1.jpg') }}" /></a>
-                <a class="slide" href=""><img src="{{ asset('img/peinture/mur1a.jpg') }}" /></a>
-                <a class="slide" href=""><img src="{{ asset('img/peinture/piece1.jpg') }}" /></a>
-                <a class="slide" href=""><img src="{{ asset('img/peinture/piece1a.jpg') }}" /></a>
-            </div>
-        </div>
+    <div class="w3-content w3-section">
+        <div class="mySlides"><img src="img/peinture/mur1.jpg" class="img-fluid"></div>
+        <div class="mySlides"><img src="img/peinture/mur1a.jpg" class="img-fluid"></div>
+        <div class="mySlides"><img src="img/peinture/piece1.jpg" class="img-fluid"></div>
     </div>
+
+    <script>
+        var myIndex = 0;
+        carousel();
+
+        function carousel() {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            myIndex++;
+            if (myIndex > x.length) {myIndex = 1}
+            x[myIndex-1].style.display = "block";
+            setTimeout(carousel, 5000); // Change image every 2 seconds
+        }
+    </script>
 
 {% endblock content %}
