--- a/templates/Pages/interieur-exterieur.html.twig
+++ b/templates/Pages/interieur-exterieur.html.twig
@@ -1,9 +1,18 @@
 {% extends "Base/base.html.twig" %}
 
-{% block classFondNav %}fond_accueil{% endblock classFondNav %}
-
-
 {% block content %}
+    <section>
+        <div class="row justify-content-around blocG">
+        <div class="bloc1">
+            <p>- Peinture intérieur et extérieur</p>
+            <p>- Ravalement de façade</p>
+            <p>- Peinture mûrs et plafonds</p>
+        </div>
 
+        <div class="bloc2">
+            <p>- </p>
+        </div>
+        </div>
+    </section>
 
 {% endblock content %}
