--- a/templates/media/new.html.twig
+++ b/templates/media/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('media/_form.html.twig') }}
 
-    <a href="{{ path('media_index') }}">back to list</a>
+    <a href="{{ path('media_show') }}">back to list</a>
 {% endblock %}
