--- a/templates/media/edit.html.twig
+++ b/templates/media/edit.html.twig
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<title>Formulaire d'édition</title>
+<title>Edit Media</title>
 
 {% block body %}
-    <h1>Edit Media</h1>
+    <h1>Modfication photo</h1>
 
     {{ include('media/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('media_index') }}">Retour vers la liste</a>
+    <a href="{{ path('media_index') }}">Retour vers les photos</a>
 
     {{ include('media/_delete_form.html.twig') }}
 {% endblock %}
