--- a/templates/media/new.html.twig
+++ b/templates/media/new.html.twig
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
-<title>Ajouts photos</title>
+<title>New Media</title>
 
 {% block body %}
-    <h1>Create new Media</h1>
+    <h1>Importer une photo</h1>
 
     {{ include('media/_form.html.twig') }}
 
-    <a href="{{ path('media_show') }}">back to list</a>
+    <a href="{{ path('media_index') }}">Retour vers les photos</a>
 {% endblock %}
