--- a/templates/Pages/realisations.html.twig
+++ b/templates/Pages/realisations.html.twig
@@ -5,7 +5,7 @@
 
 {% for medium in media %}
 
-<div class="columns">
+<div>
     <figure>
         <img src="{{ asset('img/peinture') }}/{{ medium.name }}" class="img-resp" alt="{{ medium.title }}">
         <figcaption>{{ medium.title }}</figcaption>
