--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -24,7 +24,7 @@
     <header class="container-fluid p-0" >
         <nav class="{% block classFondNav %}{% endblock classFondNav %}">
             <ul class="row justify-content-around menu ">
-                <li><a href="{{ path('accueil') }}">Acceuil</a></li>
+                <li><a href="{{ path('accueil') }}">Accueil</a></li>
                 <li><a href="{{ path('peintures') }}">Peinture intérieur - extérieur</a></li>
                 <li><a href="{{ path('travaux') }}">Travaux</a></li>
                 <li><a href="{{ path('realisations') }}">Mes réalisations</a></li>
