--- a/templates/media/index.html.twig
+++ b/templates/media/index.html.twig
@@ -7,7 +7,7 @@
 
     {% for medium in media %}
 
-        <div>
+        <div class="image">
             <figure>
                 <img src="{{ asset('img/peinture') }}/{{ medium.name }}" class="img-resp" alt="{{ medium.title }}">
                 <figcaption>{{ medium.title }}</figcaption>
