--- a/public/css/contact.scss
+++ b/public/css/contact.scss
@@ -6,3 +6,18 @@
   padding-bottom: 3%;
 }
 
+.widget_submit {
+  border: none;
+  border-radius: 4px;
+}
+
+.widget_contact {
+  width: 100%;
+}
+
+.Wsub {
+  width: 100%;
+  text-align: right;
+  margin-top: 15%;
+}
+
