--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -18,10 +18,13 @@
 %menu {
   list-style-type: none;
   font-size: 16px;
-  background-color: rgba(253, 253, 253, 0.479);
+  background-image: linear-gradient(260deg, #cccbd1 0%, #349782 100%);
+  border: 1px solid rgba(0, 0, 0, 0.2);
   padding-top: 2%;
   padding-bottom: 2%;
 }
+
+
 
 
 /* FOOTER */
