--- a/public/style.css
+++ b/public/style.css
@@ -162,22 +162,26 @@ a:hover {
   background-image: url("img/travaux.jpg");
 }
 
-* {
-  box-sizing: border-box;
-}
-
-/* Change the width of the three columns to 100%
-(to stack horizontally on small screens) */
-@media only screen and (max-width: 1440px) {
-  .columns {
-    width: 100%;
-  }
-}
 /*CONTACT*/
 #contactForm {
   margin-left: 3%;
   width: 10%;
   padding-bottom: 3%;
+}
+
+.widget_submit {
+  border: none;
+  border-radius: 4px;
+}
+
+.widget_contact {
+  width: 100%;
+}
+
+.Wsub {
+  width: 100%;
+  text-align: right;
+  margin-top: 15%;
 }
 
 .form {
@@ -199,7 +203,8 @@ a:hover {
 .menu {
   list-style-type: none;
   font-size: 16px;
-  background-color: rgba(253, 253, 253, 0.479);
+  background-image: linear-gradient(260deg, #cccbd1 0%, #349782 100%);
+  border: 1px solid rgba(0, 0, 0, 0.2);
   padding-top: 2%;
   padding-bottom: 2%;
 }
