--- a/templates/Pages/page-accueil.html.twig
+++ b/templates/Pages/page-accueil.html.twig
@@ -5,6 +5,7 @@
 {% block contentNav %}
 
   <div class="row text-center flex-column divGarcia">
+    <div class="col-lg-12 d-lg-block d-md-none d-sm-none ">
     <h1>Entreprise GARCIA</h1>
 
     <p>Artisan peintre à VILLEMOUTIERS (45270)</p>
@@ -13,7 +14,7 @@
     <div class="button">
       <a href="{{ path('contact') }}"><span>Mon devis gratuit</span></a>
   </div>
-
+  </div>
 {% endblock contentNav %}
 
 
