--- a/public/css/contact.scss
+++ b/public/css/contact.scss
@@ -2,7 +2,6 @@
 
 #contactForm{
   margin-left: 3%;
-  width: 10%;
   padding-bottom: 3%;
 }
 
@@ -15,7 +14,7 @@
   width: 100%;
 }
 
-.Wsub {
+.w-sub {
   width: 100%;
   text-align: right;
   margin-top: 15%;
