--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -4,6 +4,7 @@
 @import "realisations";
 @import "contact";
 @import "login";
+@import "index";
 * {
   margin: 0;
 }
@@ -15,16 +16,45 @@
   background-attachment: fixed;
 }
 
-%menu {
-  list-style-type: none;
-  font-size: 16px;
-  background-image: linear-gradient(260deg, #cccbd1 0%, #349782 100%);
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  padding-top: 2%;
-  padding-bottom: 2%;
+
+//MENU
+nav {
+  &.primary-navigation {
+    margin: 0 auto;
+    display: block;
+    padding-top: 20px;
+    text-align: center;
+    font-size: 16px;
+  }
 }
 
+    ul li {
+      list-style: none;
+      margin: 0 auto;
+      border-left: 2px solid #3ca0e7;
+      display: inline-block;
+      padding: 0 30px;
+      position: relative;
+      text-decoration: none;
+      text-align: center;
+    }
 
+    li a {
+      color: black;
+    }
+
+    li:hover {
+      cursor: pointer;
+    }
+
+    ul li a {
+      &:hover {
+        color: #C82829;
+        text-decoration: none;
+      }
+    }
+
+ul li a { transition: all 0.5s ease; }
 
 
 /* FOOTER */
