--- a/public/style.css
+++ b/public/style.css
@@ -4,14 +4,6 @@
   background-image: url("img/fond_accueil.jpg");
 }
 
-.menu a {
-  color: black;
-}
-
-a:hover {
-  color: black;
-}
-
 .divGarcia {
   background-color: rgba(236, 240, 241, 0.7);
   padding: 5%;
@@ -162,10 +154,15 @@ a:hover {
   background-image: url("img/travaux.jpg");
 }
 
+.image {
+  max-width: 400px;
+  display: flex;
+  justify-content: center;
+}
+
 /*CONTACT*/
 #contactForm {
   margin-left: 3%;
-  width: 10%;
   padding-bottom: 3%;
 }
 
@@ -178,7 +175,7 @@ a:hover {
   width: 100%;
 }
 
-.Wsub {
+.w-sub {
   width: 100%;
   text-align: right;
   margin-top: 15%;
@@ -193,6 +190,16 @@ a:hover {
   margin: 0;
 }
 
+.image-admin {
+  max-width: 500px;
+  display: flex;
+  justify-content: center;
+}
+
+* {
+  margin: 0;
+}
+
 .fond_accueil, .travaux {
   background-position: center;
   background-size: cover;
@@ -200,13 +207,40 @@ a:hover {
   background-attachment: fixed;
 }
 
-.menu {
-  list-style-type: none;
+nav.primary-navigation {
+  margin: 0 auto;
+  display: block;
+  padding-top: 20px;
+  text-align: center;
   font-size: 16px;
-  background-image: linear-gradient(260deg, #cccbd1 0%, #349782 100%);
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  padding-top: 2%;
-  padding-bottom: 2%;
+}
+
+ul li {
+  list-style: none;
+  margin: 0 auto;
+  border-left: 2px solid #3ca0e7;
+  display: inline-block;
+  padding: 0 30px;
+  position: relative;
+  text-decoration: none;
+  text-align: center;
+}
+
+li a {
+  color: black;
+}
+
+li:hover {
+  cursor: pointer;
+}
+
+ul li a:hover {
+  color: #C82829;
+  text-decoration: none;
+}
+
+ul li a {
+  transition: all 0.5s ease;
 }
 
 /* FOOTER */
