--- a/templates/Base/base.html.twig
+++ b/templates/Base/base.html.twig
@@ -22,8 +22,8 @@
 
     <!--MENU-->
     <header class="container-fluid p-0" >
-        <nav class="{% block classFondNav %}{% endblock classFondNav %}">
-            <ul class="row justify-content-around menu ">
+        <nav role="navigation" class="primary-navigation d-sm-none d-lg-block {% block classFondNav %}{% endblock classFondNav %}">
+            <ul class="menu col-sm-12 col-lg-12">
                 <li><a href="{{ path('accueil') }}">Accueil</a></li>
                 <li><a href="{{ path('peintures') }}">Peinture intérieur - extérieur</a></li>
                 <li><a href="{{ path('travaux') }}">Travaux</a></li>
