--- a/templates/admin/_delete_form.html.twig
+++ b/templates/admin/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('media_delete', {'id': medium.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('media_delete', {'id': medium.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette photo ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ medium.id) }}">
     <button class="btn">Supprimer</button>
