--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+{% extends 'Base/base.html.twig'%}
 
 <title>Hello AdminController!</title>
 
-{% block body %}
+{% block content %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
@@ -17,4 +17,4 @@
         <li>Your template at <code><a href="{{ '/Applications/MAMP/htdocs/Entreprise-Garcia/templates/admin/index.html.twig'|file_link(0) }}">templates/admin/index.html.twig</a></code></li>
     </ul>
 </div>
-{% endblock %}
+{% endblock content %}
