--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -3,13 +3,13 @@
 
 
 {% block content %}
-    <h1>Photos</h1>
+    <h1 class="text-center pt-5">Index Photos</h1>
 
     {% for medium in media %}
 
-        <div class="image">
+        <div class="image-admin image">
             <figure>
-                <img src="{{ asset('img/peinture') }}/{{ medium.name }}" class="img-resp" alt="{{ medium.title }}">
+                <img src="{{ asset('img/peinture') }}/{{ medium.name }}" class="img-fluid" alt="{{ medium.title }}">
                 <figcaption>{{ medium.title }}</figcaption>
             </figure>
         </div>
@@ -23,4 +23,6 @@
     {% endfor %}
 
     <a href="{{ path('media_new') }}">Ajouter une image</a>
+
+    <a href="{{ path('app_logout') }}">Se déconnecter</a>
 {% endblock content %}
