--- a/templates/admin/show.html.twig
+++ b/templates/admin/show.html.twig
@@ -2,7 +2,7 @@
 
 <title>Media</title>
 
-{% block body %}
+{% block content %}
     <h1>Media</h1>
 
     <figure>
@@ -14,5 +14,6 @@
 
     <a href="{{ path('media_edit', {'id': medium.id}) }}">Éditer la photo</a>
 
-    {{ include('media/_delete_form.html.twig') }}
-{% endblock %}
+    {{ include('admin/_delete_form.html.twig') }}
+
+{% endblock content %}
