--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -2,8 +2,29 @@
   margin: 0;
 }
 
-.image-admin{
-  max-width: 500px;
+.flex-container {
   display: flex;
+  background-color: #F5F5F5;
   justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
+  align-items: flex-end;
 }
+
+.flex-container > div {
+  color: white;
+  width: 30%;
+  margin: 10px;
+}
+
+img {
+  width: 100%;
+  max-height: 400px;
+  border-radius: 5px;
+}
+
+.flex-container p {
+  color: black;
+  text-align: center;
+}
+
