--- a/templates/admin/_form.html.twig
+++ b/templates/admin/_form.html.twig
@@ -1,5 +1,6 @@
-
+<div class="container-fluid form">
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Sauvegarder') }}</button>
+    <button class="btn2">{{ button_label|default('Sauvegarder') }}</button>
 {{ form_end(form) }}
+</div>
