--- a/templates/admin/edit.html.twig
+++ b/templates/admin/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'Base/base.html.twig' %}
 
 {% block content %}
-    <h1 class="text-center">Modfication photo</h1>
+    <h1 class="text-center pt-5">Modfication photo</h1>
 
     {{ include('admin/_form.html.twig', {'button_label': 'Éditer'}) }}
 
