--- a/templates/Pages/interieur-exterieur.html.twig
+++ b/templates/Pages/interieur-exterieur.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <section>
-        <div class="row justify-content-around blocG">
+        <div class="row justify-content-around bloc1">
         <div class="bloc1">
             <p>- Peinture intérieur et extérieur</p>
             <p>- Ravalement de façade</p>
