--- a/public/css/_form.scss
+++ b/public/css/_form.scss
@@ -1,9 +1,28 @@
 .form {
   justify-content: center;
   margin-top: 5%;
+  background-color: cadetblue;
+  border-radius: 15px;
+  padding: 80px;
+  margin-bottom: 10%;
+  width: 30%;
 }
 
 .btn2 {
   border-radius: 10px;
   margin-top: 5%;
 }
+
+.name{
+  padding-bottom: 15%;
+  width: 115%;
+}
+
+.button-delete{
+  display: flex;
+  justify-content: center;
+  width: 15%;
+  margin: 0 auto;
+  margin-top: 1%;
+}
+
