--- a/public/style.css
+++ b/public/style.css
@@ -186,17 +186,15 @@
   margin: 0 auto;
 }
 
-* {
-  margin: 0;
-}
-
 .flex-container {
   display: flex;
-  background-color: #F5F5F5;
+  background-color: rgba(1, 1, 1, 0.5);
   justify-content: center;
   flex-wrap: wrap;
   align-content: center;
   align-items: flex-end;
+  margin: 10px;
+  border-radius: 20px;
 }
 
 .flex-container > div {
@@ -208,7 +206,7 @@
 img {
   width: 100%;
   max-height: 400px;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .flex-container p {
@@ -216,14 +214,82 @@ img {
   text-align: center;
 }
 
+.flex-container a {
+  text-decoration: none;
+}
+
+.button-1 {
+  justify-content: center;
+}
+
+.button-index1, .button-index2 {
+  display: flex;
+  justify-content: center;
+  width: 15%;
+  margin: 0 auto;
+  margin-top: 1%;
+}
+
+a:hover {
+  text-decoration: none;
+  color: white;
+}
+
+@media screen and (max-width: 575px) {
+  .img-resp {
+    flex-direction: column;
+  }
+
+  .menu-resp {
+    display: none;
+  }
+}
 .form {
   justify-content: center;
   margin-top: 5%;
+  background-color: cadetblue;
+  border-radius: 15px;
+  padding: 80px;
+  margin-bottom: 10%;
+  width: 30%;
 }
 
 .btn2 {
   border-radius: 10px;
   margin-top: 5%;
+}
+
+.name {
+  padding-bottom: 15%;
+  width: 115%;
+}
+
+.button-delete {
+  display: flex;
+  justify-content: center;
+  width: 15%;
+  margin: 0 auto;
+  margin-top: 1%;
+}
+
+.show-img {
+  width: 30%;
+}
+
+.button-show1, .button-show2 {
+  display: flex;
+  justify-content: center;
+  width: 15%;
+  margin: 0 auto;
+  margin-top: 1%;
+}
+
+.button-new1 {
+  display: flex;
+  justify-content: center;
+  width: 15%;
+  margin: 0 auto;
+  margin-top: -5%;
 }
 
 * {
@@ -239,7 +305,6 @@ img {
 
 nav.primary-navigation {
   margin: 0 auto;
-  display: block;
   padding-top: 20px;
   text-align: center;
   font-size: 16px;
@@ -294,6 +359,17 @@ footer a:hover {
 
 .logofb {
   max-width: 60%;
+}
+
+@media screen and (max-width: 700px) {
+  .logofb {
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 904px) {
+  .menu-resp {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
