--- a/templates/admin/_form.html.twig
+++ b/templates/admin/_form.html.twig
@@ -1,6 +1,13 @@
 <div class="container-fluid form">
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn2">{{ button_label|default('Sauvegarder') }}</button>
-{{ form_end(form) }}
+    {{ form_start(form) }}
+
+        {{ form_row(form.name, {'attr': {'class': 'name'}}) }}
+
+        {{ form_row(form.title) }}
+
+        <button type="submit" class="btn btn-primary mt-4">{{ button_label|default('Sauvegarder') }}</button>
+
+    {{ form_end(form) }}
 </div>
+
+
