--- a/templates/admin/show.html.twig
+++ b/templates/admin/show.html.twig
@@ -2,16 +2,16 @@
 
 
 {% block content %}
-    <h1 class="text-center">Media</h1>
+    <h1 class="text-center pt-5">Media</h1>
 
-    <div class="container">
+    <div class="container show-img">
         <img src="{{ asset('img/peinture') }}/{{ medium.name }}" class="img-resp" alt="{{ medium.title }}">
         <span>{{ medium.title }}</span>
     </div>
 
-    <div class="btn"><a href="{{ path('media_index') }}">Retour vers les photos</a></div>
+    <button class="btn btn-primary button-show1"><a href="{{ path('media_index') }}">Retour vers les photos</a></button>
 
-    <div class="btn"><a href="{{ path('media_edit', {'id': medium.id}) }}">Éditer la photo</a></div>
+    <button class="btn btn-primary button-show2"><a href="{{ path('media_edit', {'id': medium.id}) }}">Éditer la photo</a></button>
 
     {{ include('admin/_delete_form.html.twig') }}
 
